gcc/testsuite/rust/rustc/ui/lifetimes/lifetime-errors/ex3-both-anon-regions-2_dg.rs
fn foo(&mut (ref mut v, w): &mut (&u8, &u8), x: &u8) {
    *v = x;
// { dg-error "" "" { target *-*-* } .-1 }
}

fn main() { }

